--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Entries" %>
+<% content_for :title, "Foodlog" %>
 
-<h1>Entries</h1>
+<h1>Foodlog</h1>
 
 <div id="entries">
   <% @entries.each do |entry| %>
