--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
   </head>
 
   <body>
+    <%= render "layouts/shared/header" %>
+
     <% if notice.present? %>
       <div class="notification is-link is-light"><%= notice %></div>
     <% end %>
