--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,12 +1,16 @@
-<% content_for :title, "Editing entry" %>
+<div class="column is-centered mt-6">
+  <div class="column is-one-third">
+    <% content_for :title, "Editing entry" %>
 
-<h1>Editing entry</h1>
+    <h1 class="is-size-2 has-text-weight-bold mb-3">Editing entry</h1>
 
-<%= render "form", entry: @entry %>
+    <%= render "form", entry: @entry %>
 
-<br>
+    <br>
 
-<div>
-  <%= link_to "Show this entry", @entry %> |
-  <%= link_to "Back to entries", entries_path %>
+    <div>
+      <%= link_to "Show this entry", @entry %> |
+      <%= link_to "Back to entries", entries_path %>
+    </div>
+  </div>
 </div>
