--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,4 +1,6 @@
-<% content_for :title, "Foodlog" %>
+<% content_for :title do %>
+  Foodlog &ndash; <%= DateTime.now.to_formatted_s(:nice_date) %>
+<% end %>
 
 <div class="columns mt-6 is-centered" id="entries">
   <% @entries.each do |entry| %>
