--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -3,9 +3,21 @@
     <nav class="navbar">
       <div class="container">
         <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="https://bulma.io/assets/images/bulma-type-white.png" alt="Logo" />
-          </a>
+          <%= link_to root_path, class: "navbar-item" do %>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="#ffffff"
+          >
+            <title>location-food</title>
+            <path
+              d="M18 11v7a2 2 0 0 1-4 0v-5h-2V3a3 3 0 0 1 3-3h3v11zM4 10a2 2 0 0 1-2-2V1a1 1 0 0 1 2 0v4h1V1a1 1 0 0 1 2 0v7a2 2 0 0 1-2 2v4h1V1a1 1 0 0 1 2 0v8a2 2 0 0 1-4 0z"
+            ></path>
+          </svg>
+          <span class="has-text-weight-bold is-size-4 ml-4">Foodlog</span>
+          <% end %>
           <span class="navbar-burger" data-target="navbarMenuHeroB">
             <span></span>
             <span></span>
@@ -17,7 +29,7 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <%= link_to new_entry_path, class: "button in-success" do %>
-                <span>Create new entry</span>
+              <span>Create new entry</span>
               <% end %>
             </div>
           </div>
@@ -29,13 +41,12 @@
   <div>
     <div class="container has-text-centered mb-4">
       <p class="title">
-      <% if content_for(:title) %>
-        <%= yield :title %>
-      <% else %>
-      Foodlog
-      <% end %>
+        <% if content_for(:title) %> <%= yield :title %> <% else %> Foodlog <%
+        end %>
       </p>
-      <%# <p class="subtitle">Subtitle</p> %>
+      <%#
+      <p class="subtitle">Subtitle</p>
+      %>
     </div>
   </div>
 </section>
